--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="container">
             <!-- search form -->
             <div class="search-container">
+                <i class="fa-solid fa-bars" id="nav-btn"></i>
                 <i class="fa-solid fa-magnifying-glass" id="search-btn"></i>
                 <div id="search-field">
                     <input
@@ -60,6 +61,35 @@
                     <button>Science</button>
                     <button>Gaming</button>
                     <button>Energy</button>
+                </div>
+
+                <!-- 반응형 menu -->
+                <div
+                    id="side-menu"
+                    class="bg-dark bg-gradient"
+                    data-bs-theme="dark"
+                >
+                    <button
+                        type="button"
+                        id="menu-close-btn"
+                        class="btn-close"
+                        aria-label="Close"
+                    ></button>
+                    <a>Sport</a>
+                    <a>Tech</a>
+                    <a>World</a>
+                    <a>Finance</a>
+                    <a>Politics</a>
+                    <a>Business</a>
+                    <a>Economics</a>
+                    <a>Entertainment</a>
+                    <a>Beauty</a>
+                    <a>Travel</a>
+                    <a>Music</a>
+                    <a>Food</a>
+                    <a>Science</a>
+                    <a>Gaming</a>
+                    <a>Energy</a>
                 </div>
             </section>
 
