--- a/index.html
+++ b/index.html
@@ -46,21 +46,13 @@
                     </svg>
                 </div>
                 <div class="col menus" id="menu-list">
-                    <button>Sport</button>
-                    <button>Tech</button>
-                    <button>World</button>
-                    <button>Finance</button>
-                    <button>Politics</button>
                     <button>Business</button>
-                    <button>Economics</button>
                     <button>Entertainment</button>
-                    <button>Beauty</button>
-                    <button>Travel</button>
-                    <button>Music</button>
-                    <button>Food</button>
+                    <button>General</button>
+                    <button>Health</button>
                     <button>Science</button>
-                    <button>Gaming</button>
-                    <button>Energy</button>
+                    <button>Sports</button>
+                    <button>Technology</button>
                 </div>
 
                 <!-- 반응형 menu -->
@@ -75,21 +67,13 @@
                         class="btn-close"
                         aria-label="Close"
                     ></button>
-                    <a>Sport</a>
-                    <a>Tech</a>
-                    <a>World</a>
-                    <a>Finance</a>
-                    <a>Politics</a>
                     <a>Business</a>
-                    <a>Economics</a>
                     <a>Entertainment</a>
-                    <a>Beauty</a>
-                    <a>Travel</a>
-                    <a>Music</a>
-                    <a>Food</a>
+                    <a>General</a>
+                    <a>Health</a>
                     <a>Science</a>
-                    <a>Gaming</a>
-                    <a>Energy</a>
+                    <a>Sports</a>
+                    <a>Technology</a>
                 </div>
             </section>
 
