--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                         class="form-control form-control-sm"
                         placeholder="Search"
                         aria-label="Search"
+                        onkeypress="if (event.keyCode == 13) getNewsByKeyword()"
                     />
                     <button
                         type="button"
