--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
 
       <!-- news -->
       <section id="news-board"></section>
+
+      <!-- pagination -->
+      <nav
+        aria-label="Page navigation example"
+        class="mt-3 d-flex justify-content-center"
+      >
+        <ul class="pagination"></ul>
+      </nav>
     </div>
 
     <script
